Creado mediante Colaboratory

--- a/FIFA20_LINEAR_REGRESSION.ipynb
+++ b/FIFA20_LINEAR_REGRESSION.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Z03gom0ZPLw8BTpauBXYF8tUIyMuHflb",
-      "authorship_tag": "ABX9TyPUMcW/itqK04bJUKK0g8Oo",
+      "authorship_tag": "ABX9TyM4nqoPoGMlpBkauTZkXiEa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -142,20 +142,33 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X,y,train_size=0.8,random_state=100)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aqaHfJkmMj3M"
+        "id": "aqaHfJkmMj3M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "50eba068-98cf-4c23-a81c-45be3fd6df8b"
       },
       "source": [
         "print(X_train.shape)\n",
         "print(X_test.shape)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(14622, 34)\n",
+            "(3656, 34)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -173,7 +186,7 @@
         "  lm.compile(optimizer,loss)\n",
         "  return lm"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -203,7 +216,7 @@
         "\n",
         "  return lm, met, coefs, predictions"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -215,7 +228,7 @@
         "var_names=list(df2.columns[df2.columns!='overall'])\n",
         "var_names.insert(0,'Intercept')"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -284,7 +297,7 @@
         "pca.fit(X)\n",
         "CPX=pca.transform(X)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -312,7 +325,7 @@
         "kmean.fit(X)\n",
         "clusters=kmean.predict(X)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -321,11 +334,17 @@
         "id": "rSMhuFH3RpbS"
       },
       "source": [
+        "colors=['red','blue','green','indigo']\n",
+        "\n",
         "plt.figure(figsize=(10,8))\n",
-        "plt.scatter(CPX[:,0],CPX[:,1],c=clusters)\n",
+        "\n",
+        "for c,col in zip(np.unique(clusters),colors):\n",
+        "  plt.scatter(CPX[clusters==c,0],CPX[clusters==c,1],c=col,label='cluster {}'.format(c))\n",
+        "\n",
         "plt.xlabel('Principal Component 1')\n",
         "plt.ylabel('Principal Component 2')\n",
-        "plt.plot();"
+        "plt.legend()\n",
+        "plt.plot();\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -375,7 +394,7 @@
         "    df_.append(data)\n",
         "  return models,met,df_,coefs"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -495,139 +514,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 359
-        },
-        "id": "XfpxC5crd8JI",
-        "outputId": "8e74a1d6-3c75-43bc-92cb-27ef2df17b12"
+        "id": "XfpxC5crd8JI"
       },
       "source": [
         "data_frames[1][data_frames[1]['nationality']=='Mexico'].head(10)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>short_name</th>\n",
-              "      <th>nationality</th>\n",
-              "      <th>overall</th>\n",
-              "      <th>overall_predict</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1067</th>\n",
-              "      <td>C. Salcedo</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>77</td>\n",
-              "      <td>76.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1356</th>\n",
-              "      <td>N. Araújo</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>76</td>\n",
-              "      <td>77.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2698</th>\n",
-              "      <td>C. Montes</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>73</td>\n",
-              "      <td>73.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3797</th>\n",
-              "      <td>J. Pereira</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>72</td>\n",
-              "      <td>72.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4173</th>\n",
-              "      <td>A. Briseño</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>71</td>\n",
-              "      <td>71.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4387</th>\n",
-              "      <td>L. Quintana</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>71</td>\n",
-              "      <td>71.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4476</th>\n",
-              "      <td>J. Domínguez</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>71</td>\n",
-              "      <td>71.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5173</th>\n",
-              "      <td>H. Mier</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>70</td>\n",
-              "      <td>71.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5646</th>\n",
-              "      <td>E. Tercero</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>70</td>\n",
-              "      <td>70.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6304</th>\n",
-              "      <td>I. González</td>\n",
-              "      <td>Mexico</td>\n",
-              "      <td>69</td>\n",
-              "      <td>68.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "        short_name nationality  overall  overall_predict\n",
-              "1067    C. Salcedo      Mexico       77             76.0\n",
-              "1356     N. Araújo      Mexico       76             77.0\n",
-              "2698     C. Montes      Mexico       73             73.0\n",
-              "3797    J. Pereira      Mexico       72             72.0\n",
-              "4173    A. Briseño      Mexico       71             71.0\n",
-              "4387   L. Quintana      Mexico       71             71.0\n",
-              "4476  J. Domínguez      Mexico       71             71.0\n",
-              "5173       H. Mier      Mexico       70             71.0\n",
-              "5646    E. Tercero      Mexico       70             70.0\n",
-              "6304   I. González      Mexico       69             68.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 37
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
