Creado mediante Colaboratory

--- a/FIFA20_LINEAR_REGRESSION.ipynb
+++ b/FIFA20_LINEAR_REGRESSION.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Z03gom0ZPLw8BTpauBXYF8tUIyMuHflb",
-      "authorship_tag": "ABX9TyM4nqoPoGMlpBkauTZkXiEa",
+      "authorship_tag": "ABX9TyPjEnZ7zddCdEetqkrwTQuv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,14 +40,23 @@
         "from tensorflow.keras import layers,losses,optimizers,Sequential,constraints\n",
         "from sklearn.metrics import r2_score , mean_squared_error\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.preprocessing import MinMaxScalerCPX[clusters==0,0].shape\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.cluster import KMeans\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline"
+        "%matplotlib inlineCPX[clusters==0,0].shapeCPX[clusters==0,0].shape"
       ],
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YmPGErcm8PSh"
+      },
+      "source": [
+        "**Preprocesamiento de los datos y elección de variables**"
+      ]
     },
     {
       "cell_type": "code",
@@ -135,6 +144,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EuY-Veir8_8I"
+      },
+      "source": [
+        "**División de los datos en entrenamiento y prueba**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qlu4AA_QMeK8"
@@ -148,26 +166,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aqaHfJkmMj3M",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "50eba068-98cf-4c23-a81c-45be3fd6df8b"
+        "id": "aqaHfJkmMj3M"
       },
       "source": [
         "print(X_train.shape)\n",
         "print(X_test.shape)"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(14622, 34)\n",
-            "(3656, 34)\n"
-          ]
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MpGDJtII9i3j"
+      },
+      "source": [
+        "**Ajuste de un modelo de regresión lineal con pesos no negativos**"
       ]
     },
     {
@@ -288,6 +302,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EMmCe0ot-Kgv"
+      },
+      "source": [
+        "**Visualizando los datos en dos dimenciones utilizando PCA y agrupandolos mediante el algoritmo de K-Means**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UUzkXNH_QRCb"
@@ -361,6 +384,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jd7kKXL8-rn7"
+      },
+      "source": [
+        "**Generando un modelo por cada grupo obtenido con el algoritmo de k-means**\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -518,17 +552,6 @@
       },
       "source": [
         "data_frames[1][data_frames[1]['nationality']=='Mexico'].head(10)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZU7VqTsUeQhI"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
