--- a/FIFA20_LINEAR_REGRESSION.ipynb
+++ b/FIFA20_LINEAR_REGRESSION.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Z03gom0ZPLw8BTpauBXYF8tUIyMuHflb",
-      "authorship_tag": "ABX9TyPjEnZ7zddCdEetqkrwTQuv",
+      "authorship_tag": "ABX9TyOcjS01FBlgTGQei4jSY2jd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,11 +40,11 @@
         "from tensorflow.keras import layers,losses,optimizers,Sequential,constraints\n",
         "from sklearn.metrics import r2_score , mean_squared_error\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import MinMaxScalerCPX[clusters==0,0].shape\n",
+        "from sklearn.preprocessing import MinMaxScalerCPX\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.cluster import KMeans\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inlineCPX[clusters==0,0].shapeCPX[clusters==0,0].shape"
+        "%matplotlib inline"
       ],
       "execution_count": 1,
       "outputs": []
@@ -223,8 +223,10 @@
         "\n",
         "  train_r2=r2_score(y_train,y_train_pred)\n",
         "  test_r2=r2_score(y_test,y_test_pred)\n",
+        "\n",
         "  met_str='Mean Squared Error\\n\\nTrain: {} Test: {}\\n\\nR2 Score\\n\\nTrain: {} Test: {}'.format(round(train_mse,3),round(test_mse,3),round(train_r2,3),round(test_r2,3))\n",
         "  met={'MSE':{'train':train_mse,'test':test_mse},'R2':{'train':train_r2,'test':test_r2},'STR':met_str}\n",
+        "  \n",
         "  weights=lm.get_weights()\n",
         "  coefs=pd.DataFrame(np.concatenate((weights[1].reshape(1,1),weights[0].reshape(1,-1)),axis=1).T,index=names_X,columns=['Coefs'])\n",
         "\n",
